<resources>
    <string name="app_name">Sportify</string>
    <!-- Cricket news -->
    <string name="head_1">Head and Smith dominate India on day one! India won the toss but not much else during three challenging sessions at The Oval</string>
    <string name="head_2">Chameera\'s four leads bowlers\' party as SL wrap up series! He was helped by Hasaranga and Kumara, before a blazing Nissanka crushed Afghanistan</string>
    <string name="head_3">Ehantharajah: Moeen returns not as Mr Right, but Mr Right Now He might flunk. He might thrive. It could be galling. It could be glorious.</string>
    <string name="head_4">King, Charles star as West Indies clinch ODI series.Hosts were reduced to 95 for 5, after Smith\'s cameo helped visitors past 300</string>
    <string name="head_5">How many Tests in England have not featured the England team? And how many times has a bowler gone wicketless in the first innings and taken a five-for in the second innings of his debut Test?</string>
    <!-- Tennis news -->
    <string name="head_6">MUCHOVA STUNNED ARYNA. IS IGA NEXT? After a thrilling Thursday, Roland Garros will crown a three-time champion, or a maiden major winner.</string>
    <string name="head_7">Novak Djokovic to play for 23rd major title after breaking down cramping Carlos Alcaraz at Roland Garros</string>
    <string name="head_8">For second straight year, Casper Ruud moves into Roland Garros final</string>
    <string name="head_9">Carlos Alcaraz breaks tennis with this forehand winner</string>
    <string name="head_10">Leylah Fernandez, Taylor Townsend oust Coco Gauff, Jessica Pegula to reach Roland Garros doubles final</string>
    <!-- NHL news -->
    <string name="head_11">Tkachuk\'s playoff heroics for Panthers recall OT goal in Memorial Cup</string>
    <string name="head_12">Gudas contributing more to Panthers\' Cup run than big beard, physicality</string>
    <string name="head_13">Bedard says going No. 1 to Blackhawks in 2023 Draft would be \'huge honor\'</string>
    <string name="head_14">Roy wants to coach in NHL again, but is at peace with emotional past</string>
    <string name="head_15">Golden Knights, Panthers each feel good about path to Stanley Cup win></string>
    <!--    NPL/NBA news-->
    <string name="head_16">Aaron Gordon gets his statement performance to put Nuggets on brink of title!! The 27-year-old forward has one of the more complete games in his Nuggets tenure, leading Denver in a career-defining moment.</string>
    <string name="head_17">BOSTON – Celtics forward Grant Williams today underwent successful surgery to repair a tear of the radial collateral ligament of the 3rd metacarpo-phalangeal joint on his left hand. </string>
    <string name="head_18">Jayson Tatum sets Game 7 record with 51 points as Celtics overpower Sixers!! Two weeks after Stephen Curry scores 50 against Sacramento in Game 7, Tatum breaks his mark to lead Boston into the Eastern Conference finals.</string>
    <string name="head_19">5 takeaways from Celtics\' series-saving Game 6 victory over Sixers. Marcus Smart keeps Boston\'s heartbeat alive until Jayson Tatum takes over late in the 4th quarter to force a Game 7.</string>
    <string name="head_20">2023 NBA Finals Schedule. Get the latest series matchups, schedules and broadcast information for the entire 2023 NBA playoffs.</string>
    <!-- Masters news -->
    <string name="head_21">\'Frustrated, confused, blindsided\': How players reacted to golf\'s merger</string>
    <string name="head_22">Patrick Cantlay dismisses slow play criticism | \'We were waiting all day\' </string>
    <string name="head_23">Jon Rahm claimed a four-shot victory over Brooks Koepka and Phil Mickelson at The Masters, his second major title </string>
    <string name="head_24">Jon Rahm came through a Sunday tussle with Brooks Koepka to claim a dominant four-stroke victory and secure a return to world No 1 at The Masters.</string>
    <string name="head_25">Brooks Koepka carded rounds of 65 and 67 over the first two days to top the leaderboard at The Masters, where victory would give him his fifth major title and first since joining LIV</string>
    <!-- NFL news -->
    <string name="head_26">Vikings officially release four-time Pro Bowl RB Dalvin Cook </string>
    <string name="head_27">Free-agent WR DeAndre Hopkins to visit Patriots next week</string>
    <string name="head_28">Jets QB Zach Wilson says he\'s \'very appreciative\' of Aaron Rodgers: \'I am learning a lot of football \'</string>
    <string name="head_29">Patriots owner Robert Kraft confident New England can compete in \'most difficult division in the NFL\'</string>
    <string name="head_30">Eagles QB Jalen Hurts is ready to start 2023 season after Super Bowl appearance: \'Last year is over\'</string>
    <!-- Football news -->
    <string name="head_31">Messi joins Inter Miami: All tickets sold out! Ticket prices jump over 1000% </string>
    <string name="head_32">Manchester City becomes most valuable football club in Europe after replacing Real Madrid: report</string>
    <string name="head_33">Qatar\'s Sheikh Jassim submits his fifth bid for Manchester United</string>
    <string name="head_34">Saudi Arabia, Aramco to buy Al-Nassr, Cristiano Ronaldo\'s football club</string>
    <string name="head_35">Moment to say goodbye to football: Zlatan Ibrahimovic retires at 41</string>
    <!-- EPL news -->
    <string name="head_36">David Moyes is expected to stay on as West Ham manager after talks with owner David Sullivan on Friday.</string>
    <string name="head_37">Kone, Barella, Thuram and more: Who Liverpool will target next? With Alexis Mac Allister signed, Liverpool will now move their focus on to other midfielder targets - but who would fit the Reds\' system the best?</string>
    <string name="head_38">What next for eight Premier League clubs to have qualified for Europe?</string>
    <string name="head_39">Chelsea agree £17m deal for 16-year-old Ecuadorian midfielder Paez</string>
    <string name="head_40">When does the 2023/24 Premier League season start? Key dates, transfer window, winter break and more</string>
    <!--    F1 news-->
    <string name="head_41">Hamilton points to ‘something in the pipeline’ for Mercedes as he eyes Red Bull fight by end of season</string>
    <string name="head_42">\‘He has nothing to lose now\’ – Horner tips Perez to rediscover his form after Monaco and Spain setbacks</string>
    <string name="head_43">F1 design legend Newey reveals two times he was tempted by Ferrari move</string>
    <string name="head_44">DRIVER MARKET: Lawrence Barretto assesses the chances of a return to the grid for Schumacher in 2024</string>
    <string name="head_45">\‘If you can’t see it, you can’t believe it\’ – Susie Wolff on new global initiative F1 Academy Discover Your Drive</string>

    <!--  news -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>