<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_btn_Football"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/img_1"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:background="@drawable/back_button"
            android:onClick="img"/>

        <ImageView
            android:id="@+id/sportifyIcon"
            android:layout_width="254dp"
            android:layout_height="39dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/slogo" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        android:elevation="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CFCFCF"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:elevation="5dp"
                app:cardCornerRadius="9dp">

                <ImageView
                    android:id="@+id/title_image1"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/messi"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvHeading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="4"
                android:text="@string/head_31"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CFCFCF"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:elevation="5dp"
                app:cardCornerRadius="9dp">

                <ImageView
                    android:id="@+id/title_image2"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/f2"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvHeading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@string/head_32"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CFCFCF"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:elevation="5dp"
                app:cardCornerRadius="9dp">

                <ImageView
                    android:id="@+id/title_image3"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/f3"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvHeading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:text="@string/head_33"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CFCFCF"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:elevation="5dp"
                app:cardCornerRadius="9dp">

                <ImageView
                    android:id="@+id/title_image4"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/f4"/>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvHeading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/head_34"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
